Oct 01, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix segfault because of format error and some cast warnings
- use q3 parse and launch functions for SOF2
- reinsert signal handlers for changing debug level

Sep 30, 2002: Alex Burger <alex@fragit_dot_net>
- Added busy server redial.  Server - Cancel Redial to stop

Sep 29, 2002: Alex Burger <alex@fragit_dot_net>
- Added Soldier of Fortune 2 support and master

Sep 27, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- q3a gametypes for afterwards. that stuff should really be stored in a runtime
  parsed, external file

Sep 26, 2002: Jordi Mallach <jordi@sindominio.net>
- updated Catalan & Spanish translations

Sep 23, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- improved debug functions, debug level can be in- and decreased with SIGUSR1
  and SIGUSR2
- proper launch function for Half-Life

Sep 16, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- changed some macros to make cvs work with older autoconf/automake

Sep 15, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- new master type "file", reads ip addresses from a file

Sep 14, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- support for Unreal Tournament 2003 Demo. No master yet. If you know one, tell
  me

Sep 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix Half-Life rcon
- primitive external rcon program that is not linked against X (xqf-rcon)

Aug 15, 2002: Jordi Mallach <jordi@sindominio.net>
- fixed a typo in the filter dialog
- updated Catalan & Spanish translations

Aug 10, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fixed some strings that where marked for translation but the gettext call was
  missing

Aug 09, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fixed player search to move the visible area to the server on which a player
  was found
- changed some player search dialog a bit
- fixed default tribes2 master port, it's possible to actually add tribes2
  masters now